<resources>
    <string name="app_name">Motherland</string>
    <string name="action_settings">Settings</string>
    <string name="url_reference">http://purplefront.net/anbu_test/</string>
    <string name="url_motherland0">http://purplefront.net/motherland_dev/home/</string>
    <string name="url_motherland">http://52.74.16.253/motherland_dev/home/</string>
    <string name="url_reference1">http://apifv.foneverify.com/U2opia_Verify/v1.0/flow/sms</string>
    <string name="url_reference2">http://apifv.foneverify.com/U2opia_Verify/v1.0/flow/update</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_password">Password</string>
    <string name="hint_password2">Repeat Password</string>
    <string name="btn_sign_up">NEXT</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_signup">SIGNUP</string>
    <string name="action_websearch">Web search</string>
    <string name="title_activity_login">Login</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_access">No internet access</string>
    <string name="no_contact_found">No contacts found</string>
    <string name="cancel">Cancel</string>
    <string name="already_exist">This contact is already exist</string>
    <string name="already_phone_exist">This phone number is already exist</string>
    <string name="save_selection_alert">Address selection have changed.do you want to update this address selection?</string>
    <string name="error_occurred1">Error occurred while accessing server please try again</string>
    <string name="error_occurred2">Error occurred while saving changes please try again.</string>
    <string name="history_instr">Order History : Wash Instructions</string>
    <string name="history_order_details">Order History : Order</string>
    <string name="history_order_item">Order History : Item</string>
    <string name="history_order_address">Order History : Address</string>
    <string name="no_history_found">No history found for this order</string>
    <string name="hint_description">Description</string>
    <string name="hint_starrating">Please rate our service</string>
    <string name="no_customer_found">No customer found</string>
    <string name="no_order_created">No orders found</string>
    <string name="create_order">Create Order</string>
    <string name="customer_List">Customer Contact</string>
    <string name="customer_Name">Customer</string>
    <string name="customer_contact">Contact</string>
    <string name="order_typet">Order Type</string>
    <string name="service_type">Service Type</string>
    <string name="Garment_Type">Garment</string>
    <string name="Garment_Quantity">Quantity</string>
    <string name="delivery_date">Exp Delivery Date/Time</string>
    <string name="expected_pickup">Exp pickup Date/Time</string>
    <string name="view_update_history">To view update history, click on</string>
    <string name="no_contacts_found">There is no contact found for this customer, Please create a new contact</string>
    <string name="Select">Select</string>
    <string name="edit_instr_title">Edit Instruction</string>
    <string name="wash_type">Wash type</string>
    <string name="style_code">Style code</string>
    <string name="status">Status</string>
    <string name="enter_quantity2">Enter quantity</string>
    <string name="enter_quantity3">Enter quantity</string>
    <string name="item">Item</string>
    <string name="enter_style_code">Enter style code</string>
    <string name="enter_instruction">Enter instruction</string>
    <string name="enter_atleast_one_product">Please enter details of atleast one garment</string>
    <string name="enter_product_details">Please enter all details of garment</string>
    <string name="instr_title">Edit Order</string>
    <string name="customer_address_title">Addresses</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="address3">Address3</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="no_address">No address available,Please create a new address</string>
    <string name="wash_instructions">Wash Instruction</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="order_detail">Order Details</string>
    <string name="customer_details_title">Customer Details</string>
    <string name="Create_order_title">Create Order</string>
    <string name="create_address_title">Create Address</string>
    <string name="select_address_title">Select Address</string>
    <string name="confirm_details_title">Customer Details</string>
    <string name="save_instruction">Instruction has saved successfully</string>
    <string name="vieweditprofile_heading">View/Edit Profile</string>
    <string name="vieweditprofile_name">Name*</string>
    <string name="vieweditprofile_name_hint1">Enter name</string>
    <string name="vieweditprofile_email">Email</string>
    <string name="vieweditprofile_email_hint">Enter your email address</string>
    <string name="vieweditprofile_email_hint1">Enter your email</string>
    <string name="vieweditprofile_setpassword">Set Password</string>
    <string name="vieweditprofile_bsname">Business name</string>
    <string name="vieweditprofile_bsname_hint">Enter your business name</string>
    <string name="vieweditprofile_sitename_hint">Enter your business name</string>
    <string name="vieweditprofile_category">Business category</string>
    <string name="vieweditprofile_phone">Phone</string>
    <string name="vieweditprofile_phone_hint">Enter your 10 digit mobile number</string>
    <string name="vieweditprofile_phone_hint1">Enter mobile number</string>
    <string name="vieweditprofile_fbpage">FB page</string>
    <string name="vieweditprofile_fbpage_hint">Enter your Facebook page name</string>
    <string name="vieweditprofile_address">Address</string>
    <string name="vieweditprofile_address2">Address2</string>
    <string name="vieweditprofile_address3">Address3</string>
    <string name="vieweditprofile_state">State</string>
    <string name="vieweditprofile_address_hint">Enter your address</string>
    <string name="vieweditprofile_address_hint1">Enter your address</string>
    <string name="vieweditprofile_city">City</string>
    <string name="vieweditprofile_city_hint">Enter your city</string>
    <string name="vieweditprofile_pincode">Pincode</string>
    <string name="vieweditprofile_pincode_hint">Enter your pincode</string>
    <string name="vieweditprofile_state_hint">Select your State</string>
    <string name="vieweditprofile_logo_discription">Select your official logo</string>
    <string name="vieweditprofile_submit">Save</string>
    <string name="corrent_password">Password is wrong</string>
    <string name="vieweditprofile_address_hint2">Enter your address 1</string>
    <string name="update_saved">Changes has saved sucessfully</string>
    <string name="update_failed">Update failed due to unknown reason. Contact administrator for the issue.</string>
    <string name="unknownerror7">No response from server </string>
    <string name="under_construction">This feature is under construction </string>
    <string name="logout_warning">Are you sure want to logout?</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="exit_warning">Are you sure want to exit the app?</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_press_back_twice_message">press back again to exit motherland</string>
    <string name="alphaonly">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="number_only">0123456789()+- .</string>
    <string name="customer_name">Enter customer name</string>
    <string name="customer_website">Website*</string>
    <string name="customer_website_hint">Enter website</string>
    <string name="customer_phone">Phone</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="planets_array">
        <item>Customers</item>
        <item>Orders</item>
        <item>Reports</item>
        <item>Settings</item>
        <item>Exit</item>

        
    </string-array>
    <string-array name="planets_array1">
        <item>Customers</item>
        <item>Orders</item>
        <item>Reports</item>
        <item>Settings</item>
        <item>Exit</item>

        
    </string-array>
    <string-array name="garment_item">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

        
    </string-array>
    <string name="str_January">January</string>
    <string name="str_February">February</string>
    <string name="str_March">March</string>
    <string name="str_April">April</string>
    <string name="str_May">May</string>
    <string name="str_June">June</string>
    <string name="str_July">July</string>
    <string name="str_August">August</string>
    <string name="str_September">September</string>
    <string name="str_October">October</string>
    <string name="str_November">November</string>
    <string name="str_December">December</string>
    <string name="title_activity_navigataion">NavigataionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correct_user_name">Enter your username</string>
    <string name="correct_username_without_space">Enter username without any space</string>
    <string name="username_minimum_limit">Enter username should have atleast 6 characters</string>
    <string name="correct_email2">Enter correct email</string>
    <string name="correct_contact">Enter contact number</string>
    <string name="category_not_change">Category can not be changed</string>
    <string name="correct_limit_contact">Enter minimum 10 digit number </string>
    <string name="correct_mobile">Enter correct mobile number</string>
    <string name="changepassword_heading">Change Password</string>
    <string name="changepassword_email">Username</string>
    <string name="changepassword_oldpassword">Current Password</string>
    <string name="changepassword_oldpassword_hint">Enter current password</string>
    <string name="changepassword_newpassword">New password</string>
    <string name="changepassword_newpassword_hint">Enter new password</string>
    <string name="changepassword_confirmnewpassword">Confirm new Password</string>
    <string name="changepassword_confirmnewpassword_hint">Enter confirm password</string>
    <string name="changepassword_showpassword">Show Password</string>
    <string name="Changepassword_submit">Submit</string>
    <string name="changepassword_success">Your password has been changed successfully</string>
    <string name="change_password_correct">Try again with the correct password</string>
    <string name="registration_Address_line1_hint">Address Line1*</string>
    <string name="registration_Address_line2_hint">Address Line2</string>
    <string name="registration_Address_line3_hint">Address Line3</string>
    <string name="registration_city_hint">City</string>
    <string name="registration_pin_code_hint">Pin code*</string>
    <string name="registration_state_hint">state*</string>
    <string name="registration_phone_hint">Phone*</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_name">Enter name</string>
</resources>